Header, date: correct spacing
When the label contains letters and numbers the allocation
does not work properly, force re-allocation here. Also remove
some extra margin at the top to move the date up some more.

--- a/data/application.css
+++ b/data/application.css
@@ -232,7 +232,7 @@ flowboxchild {
 
 /* header */
 .header {
-  margin: 10px 5px 10px 5px;
+  margin: 0 5px 10px 5px;
 }
 
 .header .date {
